--- a/package.json
+++ b/package.json
@@ -1,4 +1,11 @@
 {
+  "name": "covalent",
+  "description": "A plugin to share your editor for collaborative coding.",
+  "repository": "https://github.com/numso/atom-covalent",
+  "version": "0.0.0",
+  "engines": {
+    "atom": ">=0.177.0"
+  },
   "main": "./index.js",
   "dependencies": {
     "firebase": "2.1.1",
